------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

24-Mar-2013 Mark Dexter
 # [#30223] TAGS: Missing 'Help' Button in Toolbar.
 # [#30366] Help Screens, key wrong, missing or not created correctly. 

24-Mar-2013 Michael Babker
 + [#30318] Pull in media wiki package from platform.  Thanks Elin
 ^ [#30356] Update JImage to latest platform version.  Thanks Don
 # [#30266] Array to string conversion in smart search.  Thanks Edgars
 # [#28978] Smart search (com_finder) - problem when using "Allow Empty Search".  Thanks Valentin
 # [#30338] Wrong contact items publishing state from Contact details > state.  Thanks Piotr
 + [#30369] Pull in OpenStreetMap package from the platform.  Thanks Elin
 + [#30364] Add UNION ALL feature from platform.  Thanks Elin

24-Mar-2013 Jean-Marie Simonet
 # [#30234] Route work classes for Tags. Thanks Elin

23-Mar-2013 Jean-Marie Simonet
 # [#30361] Chosen minified and un-minified versions are different. Thanks Roberto
 # [#30348] Popular Tags Module showing multiple copies of links. Thanks Elin
 # [#30351] State and language filtering not presesnt in Similar Tag module. Thanks Elin.

22-Mar-2013 Jean-Marie Simonet
 $ Updating Installation ini files: he-IL, nl-NL

21-Mar-2013 Michael Babker
 ^ [#30319] Accessibility fixes to JForm Platform Synch.  Thanks Elin
 ^ [#30353] Clean up left over debugging.  Thanks Elin

21-Mar-2013 Jean-Marie Simonet
 # [#30340] Fix regression in Similar Tags Module. Thanks Elin
 $ Duplicate lang string +
 # [#30320] *Deleted Tagged items are not deleted from the map table and core_content table. Thanks Elin
 # [#30346] *Contact creator does not include default language "All" for the contact created