@@ -32,13 +32,13 @@
 	<fields name="params">
 		<fieldset name="basic">
 			<field
-				name="tags_layout" type="componentlayout"
-				label="JGLOBAL_FIELD_LAYOUT_LABEL"
-				description="JGLOBAL_FIELD_LAYOUT_DESC"
-				menuitems="true"
-				extension="com_tags"
-				view="tags"
-			/>
+				name="tag_columns"
+				type="text"
+				default="4"
+				filter="integer"
+				label="COM_TAGS_COMPACT_COLUMNS_LABEL"
+				description="COM_TAGS_NUMBER_COLUMNS_DESC">
+			</field>
 
 			<field name="all_tags_show_description_image" type="list"
 				description="COM_TAGS_SHOW_ALL_TAGS_IMAGE_DESC"
