@@ -28,7 +28,8 @@ $ -> Language fix or change
 
 24-Mar-2013 Mark Dexter
  # [#30223] TAGS: Missing 'Help' Button in Toolbar.
- # [#30366] Help Screens, key wrong, missing or not created correctly. 
+ # [#30366] Help Screens, key wrong, missing or not created correctly.
+ # [#30335] Updated Front-end Tags Layout. Thanks David.
 
 24-Mar-2013 Michael Babker
  + [#30318] Pull in media wiki package from platform.  Thanks Elin
